# Riscv-emulator

./: .gitignore  CMakeLists.txt  README.md  build.bat
include/: bitmasking.hpp  casting.hpp
src/: casting.hpp  cpu.cpp  cpu.hpp  main.cpp  memory.cpp  memory.hpp
